<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF5F8"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        android:padding="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/john_doe"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/united_states_of_america" />

            <TextView
                android:id="@+id/jobTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/vanture_capitalist" />

            <TextView
                android:id="@+id/jobFieldTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/information_technology" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/messageButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/message"
                android:drawableLeft="@drawable/conversation"
                android:drawablePadding="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:minWidth="60dp"
                android:paddingStart="19dp"
                android:paddingEnd="19dp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/viewProfileButton"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/view_profile"
                android:drawableLeft="@drawable/view"
                android:drawablePadding="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:minWidth="60dp"
                android:paddingStart="19dp"
                android:paddingEnd="19dp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>
