<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homePageVCConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F8"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/searchbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/message"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:minWidth="60dp"
        android:paddingStart="12dp"
        android:paddingEnd="19dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextSearch"/>

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:entries="@array/country_names"
        android:padding="8dp"
        android:prompt="@string/country_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <Spinner
        android:id="@+id/required_field_spinner"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/interestedFields"
        android:gravity="right"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/country_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/country_spinner"
        app:layout_constraintTop_toTopOf="@+id/country_spinner" />

    <CheckBox
        android:id="@+id/vc_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Venture Capitalist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_spinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeVCRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vc_checkbox" />
</androidx.constraintlayout.widget.ConstraintLayout>